# schemas_bancos

./: Query_criacao_DATABASE.sql  Query_criacao_tabelas.sql  README.md  pyproject.toml  schemas_pydantic.py
src/: autenticacao.py  conexao_banco.py  gerar_classes_pydantic.py  main.py
